--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,7 +50,8 @@ exec-once = neovide &
 exec-once = nm-applet --indicator &
 exec-once = waybar & swww-daemon & swww img ~/.config/hypr/background-image/cifangyi-cropped.jpg --resize fit &
 exec-once = dunst &
-exec-once = ibus-daemon -drx
+exec-once = ibus-daemon -drx &
+exec-once = fcitx5
 
 
 #############################
