update hyprland and add nix config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,9 +34,11 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = warp-terminal
 $fileManager = thunar 
 $menu = wofi --show drun
+# shell = /run/current-system/sw/bin/nu
+# change default shell of current user with: chsh -s /run/current-system/sw/bin/nu
 
 
 #################
