--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = wofi --show drun
 
 exec-once = neovide &
 exec-once = nm-applet --indicator &
-exec-once = waybar & swww-daemon & swww img ~/.config/hypr/background-image/cifangyi-cropped.jpg --resize fit &
+exec-once = waybar & swww-daemon & swww img ~/.config/hypr/background-image/tifa.jpg --resize fit &
 exec-once = dunst &
 exec-once = ibus-daemon -drx &
 exec-once = fcitx5
@@ -173,7 +173,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, N, exec, neovide
-bind = $mainMod, B, exec, firefox
+bind = $mainMod, B, exec, vivaldi
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, L, movefocus, l
