--- a/idea/.ideavimrc
+++ b/idea/.ideavimrc
@@ -27,10 +27,10 @@ nnoremap <leader>ff :action SearchEverywhere<CR>
 nnoremap gcc: action CommentByLineComment<CR>
 nnoremap <C-l> gt
 nnoremap <C-h> gT
-nnoremap sj :split<CR>
-nnoremap sl :vsplit<CR>
-nnoremap H <C-w>h
-nnoremap L <C-w>l
+nnoremap <C-s>j :split<CR>
+nnoremap <C-s>l :vsplit<CR>
+nnoremap <C-m>h <C-w>h
+nnoremap <C-m>l <C-w>l
 
 nnoremap <leader>fc :action ReformatCode<CR>
 nnoremap <leader>r :action Run<CR>
@@ -45,8 +45,17 @@ nnoremap <leader>rn :action RenameElement<CR>
 nnoremap gr :action ShowUsages<CR>
 nnoremap gi :action GotoImplementation<CR>
 nnoremap gs :action GotoSuperMethod<CR>
+nnoremap gh :action TypeHierarchy<CR>
+nnoremap gch :action CallHierarchy<CR>
+nnoremap gm :action MethodHierarchy<CR>
+nnoremap <C-t> :action ActivateTerminalToolWindow<CR>
 nnoremap + :action EditorIncreaseFontSize<CR>
 nnoremap - :action EditorDecreaseFontSize<CR>
+nnoremap <C-g> :action Generate<CR>
+inoremap <C-g> :action Generate<CR>
+nnoremap <C-e> :action ActivateProjectToolWindow<CR>
+nnoremap <C-a> :action ActivateDatabaseToolWindow<CR>
+nnoremap <C-o> :action HideAllWindows<CR>
 nnoremap <C-j> <C-n>
 nnoremap <leader>vv :source ~/.ideavimrc<CR>
 inoremap <C-l> <Esc>gt
@@ -57,13 +66,11 @@ vnoremap < <gv
 vnoremap > >gv
 vnoremap <A-k> :m '<-2<CR>gv=gv
 vnoremap <A-j> :m '>+1<CR>gv=gv
+vnoremap p "_dP
 xnoremap <A-k> :move '<-2<CR>gv=gv
 xnoremap <A-j> :move '>+1<CR>gv=gv
 nnoremap <C-w> :q<CR>
 nnoremap <CR> i<CR><ESC>w
-nnoremap <C-g> :action Generate<CR>
-inoremap <C-g> :action Generate<CR>
-inoremap jk <Esc>
 
 Plug 'machakann/vim-highlightedyank'
 Plug 'tpope/vim-commentary'
