--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -7,19 +7,26 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "assistant": {
+    "default_model": {
+      "provider": "openai",
+      "model": "gpt-4o"
+    },
+    "version": "2"
+  },
   "tab_bar": {
     "show": true
   },
 
   "vim_mode": true,
-  "ui_font_size": 18,
-  "buffer_font_size": 18,
+  "ui_font_size": 20,
+  "buffer_font_size": 20,
   "theme": {
     "mode": "system",
     "light": "One Light",
     "dark": "Tokyo Night"
   },
-  "ui_font_family": "Patrick Hand",
+  "ui_font_family": "Neucha",
   "buffer_font_family": "ComicShannsMono Nerd Font",
   "autosave": "on_window_change",
   "formatter": "prettier",
